[package]
name = "lightyear-packet"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Packet handling for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = ["lightyear-io/std"]

[dependencies]
# local crates
lightyear-io = { path = "../lightyear-io", default-features = false }

# utils
anyhow.workspace = true
bytes.workspace = true
cfg-if.workspace = true
hashbrown.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
bincode.workspace = true
smallvec.workspace = true

[lints]
workspace = true
