[package]
name = "lightyear"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Server-client networking library for the Bevy game engine with modular architecture"
readme = "../README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license.workspace = true
exclude = ["/tests"]
publish = true

[features]
default = [
  "std",
  "client",
  "server",
  "replication",
  "prediction",
  "interpolation",
]

# this needs "lightyear_*?/std" to propagate std feature to all sub-crates.
std = [
  "bevy/std",
  # needed for bevy_transform parallel
  "bevy/async_executor",
  "serde/std",
  "bincode/std",
  "bytes/std",
  "no_std_io2/std",
  "lightyear_interpolation?/std",
  "lightyear_udp?/std",
  "lightyear_netcode?/std",
  "lightyear_prediction?/std",
  "lightyear_inputs?/std",
  "lightyear_inputs_leafwing?/std",
]
client = [
  "lightyear_connection/client",
  "lightyear_netcode?/client",
  "lightyear_sync/client",
  "lightyear_replication?/client",
  "lightyear_inputs?/client",
  "lightyear_inputs_leafwing?/client",
  "lightyear_inputs_native?/client",
  "lightyear_webtransport?/client"
]
server = [
  "lightyear_connection/server",
  "lightyear_netcode?/server",
  "lightyear_sync/server",
  "lightyear_replication?/server",
  "lightyear_inputs?/server",
  "lightyear_inputs_leafwing?/server",
  "lightyear_inputs_native?/server",
  "lightyear_udp?/server",
  "lightyear_webtransport?/server",
]
replication = [
  "dep:lightyear_replication"
]
prediction = [
  "dep:lightyear_prediction",
  "dep:lightyear_replication",
  "lightyear_replication?/prediction",
]
interpolation = [
  "dep:lightyear_interpolation",
  "dep:lightyear_replication",
  "lightyear_replication?/interpolation",
]
trace = []
metrics = [
  "dep:metrics",
  "dep:metrics-util",
  "dep:metrics-tracing-context",
  "dep:metrics-exporter-prometheus",
  "lightyear_interpolation?/metrics",
  "lightyear_replication?/metrics",
  "lightyear_sync/metrics",
  "lightyear_transport/metrics",
  "lightyear_prediction?/metrics",
  "lightyear_inputs?/metrics",
  "lightyear_netcode?/metrics"
]
netcode = [
  "dep:lightyear_netcode",
]
visualizer = ["dep:bevy_metrics_dashboard", "metrics"]
webtransport = [
  "std",
  "dep:lightyear_webtransport"
]
webtransport_self_signed = [
  "lightyear_webtransport/self-signed"
]
webtransport_dangerous_configuration = [
  "lightyear_webtransport/dangerous-configuration"
]
input_native = [
  "dep:lightyear_inputs",
  "dep:lightyear_inputs_native",
]
leafwing = [
  "dep:lightyear_inputs",
  "dep:leafwing-input-manager",
  "dep:lightyear_inputs_leafwing",
]
# NOTE: because lightyear doesn't enable any features of avian by default, your crate must
#       enable essential features (like f32 or f64).
avian2d = [
  "dep:avian2d",
#  "dep:lightyear_avian",
#  "lightyear_avian/2d",
]
avian3d = [
  "dep:avian3d",
  "avian3d/3d",
#  "dep:lightyear_avian",
#  "lightyear_avian/3d",
]

# IO LAYERS
udp = [
  "dep:lightyear_udp",
  "std",
]
websocket = [
  "std",
]
crossbeam = [
  "dep:lightyear_crossbeam",
]

# CONNECTION LAYERS
steam = [
  "dep:steamworks",
  "std",
]
# TODO: add netcode

#lag_compensation = [
#  "lightyear_avian?/lag_compensation",
#]
track_location = ["bevy/track_location"]

# compression
lz4 = ["dep:lz4_flex"]
zstd = ["dep:zstd"]

[dependencies]
# local crates
lightyear_macros.workspace = true
lightyear_connection.workspace = true
lightyear_core.workspace = true
lightyear_frame_interpolation = { workspace = true, optional = true }
lightyear_link.workspace = true
lightyear_netcode = {workspace = true, optional = true}
lightyear_interpolation = {workspace = true, optional = true}
lightyear_prediction = {workspace = true, optional = true}
lightyear_messages.workspace = true
lightyear_replication = {workspace = true, optional = true}
lightyear_sync.workspace = true
lightyear_transport.workspace = true
lightyear_serde.workspace = true
lightyear_utils.workspace = true
#lightyear_avian = {workspace = true, optional = true}
lightyear_inputs = {workspace = true, optional = true}
lightyear_inputs_leafwing = {workspace = true, optional = true}
lightyear_inputs_native = {workspace = true, optional = true}
lightyear_crossbeam = {workspace = true, optional = true}
lightyear_webtransport = {workspace = true, optional = true}

# no_std
# TODO: only enable in no_std
no_std_io2.workspace = true

# input
leafwing-input-manager = { workspace = true, optional = true }

# physics
avian2d = { workspace = true, optional = true }
avian3d = { workspace = true, optional = true }

# serialization
bincode.workspace = true
bytes.workspace = true
serde.workspace = true

# tracing
tracing.workspace = true

# metrics
metrics = { workspace = true, optional = true }
metrics-util = { workspace = true, optional = true }
metrics-tracing-context = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }

# debug ui
bevy_metrics_dashboard = { workspace = true, optional = true }

# bevy
bevy.workspace = true

# compression
lz4_flex = { workspace = true, optional = true }


[target."cfg(not(target_family = \"wasm\"))".dependencies]
lightyear_udp = { workspace = true, optional = true }
steamworks = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[target."cfg(target_family = \"wasm\")".dependencies]
console_error_panic_hook.workspace = true
bevy_web_keepalive.workspace = true
futures-lite = { workspace = true, optional = true }
getrandom.workspace = true
wasm-bindgen = { workspace = true, optional = true }
zstd = { workspace = true, optional = true, features = ["wasm"] }


[dev-dependencies]
mock_instant.workspace = true
leafwing-input-manager.workspace = true

# docs.rs-specific configuration
[package.metadata.docs.rs]
# we cannot use all-features = true, because we need to provide additional features for avian
# when building the docs
# NOTE: building docs.rs doesn't work if I include avian
features = ["metrics", "udp", "webtransport", "leafwing", "websocket", "steam", "zstd", "crossbeam", "lag_compensation"]
rustdoc-args = ["--cfg", "docsrs"]
