[package]
name = "lightyear_aeronet"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "bevy/std",
]

test_utils = []

[dependencies]
aeronet_io.workspace = true
lightyear_link.workspace = true

# bevy
bevy.workspace = true

[lints]
workspace = true