[package]
name = "lightyear_aeronet"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = []
test_utils = []

[dependencies]
lightyear_link.workspace = true

aeronet_io.workspace = true

tracing.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true

[lints]
workspace = true
