[package]
name = "lightyear_avian"
version = "0.21.0-rc.1"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Helper library to use Lightyear with Avian"
readme = "../README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license.workspace = true
exclude = ["/tests"]
publish = true


[features]
default = ["std"]
std = [
    "lightyear_prediction/std",
    "lightyear_replication/std",
    "lightyear_interpolation/std"
]
2d = ["avian2d/2d"]
3d = ["avian3d/3d"]
lag_compensation = [
    "dep:lightyear_link",
]


[dependencies]
avian2d = { workspace = true, optional = true }
avian3d = { workspace = true, optional = true }
bevy = { workspace = true }
# TODO: gate these behind features?
lightyear_core.workspace = true
lightyear_link = { workspace = true, optional = true }
lightyear_prediction.workspace = true
lightyear_interpolation.workspace = true
lightyear_frame_interpolation.workspace = true
lightyear_replication.workspace = true
