[package]
name = "lightyear_avian3d"
version = "0.21.1"
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
description = "Helper library to use Lightyear with Avian3d"
readme = "../README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license.workspace = true
publish = true

[lib]
name = "lightyear_avian3d"
required-features = ["3d"]
bench = false

[features]
default = ["std", "3d"]
3d = [
    "avian3d/3d",
    "avian3d/parry-f32",
]
std = ["lightyear_prediction/std"]
lag_compensation = []

[dependencies]
lightyear_core.workspace = true
lightyear_link.workspace = true
lightyear_prediction.workspace = true
lightyear_interpolation.workspace = true
lightyear_frame_interpolation.workspace = true
lightyear_replication.workspace = true

avian3d.workspace = true

tracing.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_transform = { workspace = true, features = ["bevy-support", "libm"] }
bevy_utils.workspace = true

[package.metadata.docs.rs]
all-features = true
