[package]
name = "lightyear_client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = [
    "interpolation",
    "std",
]
std = [
    "bevy/std",
    "bytes/std",
    "serde/std",
]
interpolation = [
    "lightyear_sync/interpolation",
]
prediction = []

# connection
steam = ["dep:lightyear_steam"]
netcode = ["dep:lightyear_netcode"]

# io
crossbeam = ["lightyear_shared/crossbeam"]
udp = ["lightyear_shared/udp"]

[dependencies]
lightyear_connection.workspace = true
lightyear_utils.workspace = true
lightyear_serde.workspace = true
lightyear_core.workspace = true
lightyear_messages.workspace = true
lightyear_crossbeam = {workspace = true, optional = true }
lightyear_netcode = {workspace = true, optional = true, features = ["client"] }
lightyear_transport.workspace = true
lightyear_udp = {workspace = true, optional = true }
lightyear_steam = {workspace = true, optional = true}
lightyear_sync = { workspace = true, features = ["client"] }
lightyear_shared.workspace = true

# utils
tracing.workspace = true

# serde
serde.workspace = true
bytes.workspace = true

# bevy
bevy.workspace = true

[dev-dependencies]
lightyear_crossbeam.workspace = true

[lints]
workspace = true
