[package]
name = "lightyear_connection"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Connection handling for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "lightyear_link/std",
    "lightyear_transport/std",
    "lightyear_messages/std",
    "lightyear_serde/std"
]
client = []
server = []

[dependencies]
# local crates
lightyear_core.workspace = true
lightyear_link.workspace = true
lightyear_messages.workspace = true
lightyear_transport.workspace = true
lightyear_serde.workspace = true

# bevy
bevy.workspace = true

# utils
anyhow.workspace = true
bytes.workspace = true
cfg-if.workspace = true
hashbrown.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
chacha20poly1305.workspace = true

[dev-dependencies]
lightyear_macros.workspace = true
lightyear_messages = {workspace = true, features = ["test_utils"]}
lightyear_transport = {workspace = true, features = ["test_utils"]}

[lints]
workspace = true
