[package]
name = "lightyear_connection"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Connection handling for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "lightyear_link/std",
    "lightyear_serde/std"
]
client = []
server = []



[dependencies]
# local crates
lightyear_core.workspace = true
lightyear_link.workspace = true
lightyear_serde.workspace = true

# bevy
bevy.workspace = true

# utils
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
