[package]
name = "lightyear_connection"
version = "0.25.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Connection handling for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = []
client = []
server = []

[dependencies]
# local crates
lightyear_core.workspace = true
lightyear_link.workspace = true
lightyear_serde.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_platform.workspace = true
bevy_reflect.workspace = true

# utils
bytes.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
