[package]
name = "lightyear_core"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types shared by lightyear crates"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "bevy/std",
    "serde/std",
]
prediction = []
interpolation = []

[dependencies]
lightyear_utils.workspace = true
lightyear_serde.workspace = true

# utils
chrono.workspace = true
paste.workspace = true
tracing.workspace = true

# bevy
bevy.workspace = true

# serde
serde.workspace = true

[dev-dependencies]
approx.workspace = true

[lints]
workspace = true
