[package]
name = "lightyear_core"
version = "0.24.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Core types shared by lightyear crates"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = []
test_utils = ["dep:mock_instant"]
# special feature to avoid using mock_instant when running cargo doc and cargo clippy
not_mock = []

[dependencies]
lightyear_utils.workspace = true
lightyear_serde.workspace = true

# utils
chrono.workspace = true
tracing.workspace = true

# bevy
bevy_app = { workspace = true, features = ["bevy_reflect"] }
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_platform.workspace = true
bevy_reflect.workspace = true
bevy_time.workspace = true

# serde
serde.workspace = true

# test
mock_instant = { workspace = true, optional = true }

[dev-dependencies]
test-log.workspace = true
approx.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
