[package]
name = "lightyear_crossbeam"
version = "0.26.0-rc2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = []
test_utils = ["lightyear_core/test_utils"]

[dependencies]
lightyear_core.workspace = true
lightyear_link.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true

# utils
aeronet_io.workspace = true
crossbeam-channel.workspace = true
tracing.workspace = true

# serde
bytes.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
