[package]
name = "lightyear_deterministic_replication"
version = "0.25.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Primitives for deterministic replication (as opposed to state replication) in the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
std = [
    "bevy_ecs/std",
    "lightyear_inputs/std",
    "lightyear_messages/std",
    "lightyear_prediction/std",
]
default = ["std"]

[dependencies]
lightyear_utils.workspace = true
lightyear_core.workspace = true
lightyear_inputs = {workspace = true, features = ["client"] }
lightyear_link.workspace = true
lightyear_messages.workspace = true
lightyear_connection = {workspace = true, features = ["server"] }
lightyear_sync.workspace = true
lightyear_prediction = { workspace = true, features = ["deterministic"] }
lightyear_replication = { workspace = true, features = ["deterministic"]}

# utils
seahash.workspace = true
tracing.workspace = true

# bevy
bevy_app = { workspace = true, features = ["bevy_reflect"] }
bevy_ecs.workspace = true

# serde
serde.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
