[package]
name = "lightyear_frame_interpolation"
version = "0.22.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = ["lightyear_replication/std"]

[dependencies]
lightyear_core.workspace = true
lightyear_connection.workspace = true
lightyear_replication.workspace = true
lightyear_interpolation.workspace = true

# utils
tracing.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_time.workspace = true
bevy_transform = { workspace = true, features = ["bevy-support"] }

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
