[package]
name = "lightyear_inputs"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "bevy/std",
    "serde/std",
    "lightyear_sync/std"
]
client = [
    "lightyear_connection/client",
    "lightyear_sync/client"
]
server = [
    "lightyear_connection/server",
    "lightyear_sync/server"
]


[dependencies]
lightyear_connection.workspace = true
lightyear_core.workspace = true
lightyear_sync.workspace = true
lightyear_messages.workspace = true

# utils
tracing.workspace = true

# serde
serde.workspace = true

# bevy
bevy.workspace = true

[lints]
workspace = true
