[package]
name = "lightyear_inputs"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "bevy/std",
    "serde/std",
    "lightyear_sync/std",
    "lightyear_core/std",
    "lightyear_messages/std",
    "lightyear_connection/std"
]
client = [
    "lightyear_connection/client",
    "lightyear_messages/client",
    "lightyear_sync/client",
    "lightyear_transport/client",
]
server = [
    "lightyear_connection/server",
    "lightyear_messages/server",
    "lightyear_sync/server",
    "lightyear_transport/server",
]
metrics = [
    "dep:metrics", "std"
]
interpolation = [
    "dep:lightyear_interpolation"
]


[dependencies]
lightyear_connection.workspace = true
lightyear_core.workspace = true
lightyear_sync.workspace = true
lightyear_messages.workspace = true
lightyear_prediction.workspace = true
lightyear_replication.workspace = true
lightyear_transport.workspace = true
lightyear_link.workspace = true
lightyear_interpolation = { workspace = true, optional = true}

# utils
metrics = { workspace= true, optional=true}
tracing.workspace = true

# serde
serde.workspace = true

# bevy
bevy.workspace = true

[lints]
workspace = true
